<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:title="@string/rename_list"
        android:id="@+id/list_toolbar_rename"
        android:icon="@android:drawable/ic_menu_delete" />
    <item android:title="@string/delete_list"
        android:id="@+id/list_toolbar_delete"
        android:icon="@android:drawable/ic_menu_delete" />
    <item android:id="@+id/list_toolbar_timer"
        android:title="00:00"
        app:showAsAction="always"
        android:checkable="false"
        android:enabled="true"
        android:clickable="false"/>

</menu>
