<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sdd.aisle4android.HomeActivity">

    <!--  Include toolbar XML layout  -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/home_toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/home_heading"
        />
    <ListView
        android:id="@+id/home_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize"

        />
    <!--  Lower Panel  -->
    <LinearLayout
        android:id="@+id/home_lower_panel"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/home_btn_new_list"
            android:onClick="onClickBtnNewList"
            android:text="@string/btn_new_list"
            android:textSize="17sp"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp" />
        <!--  Vertical divider line  -->
        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#FFFFFF" />
        <Button
            android:id="@+id/home_btn_pin"
            android:onClick="onClickBtnPin"
            android:text="@string/btn_pin"
            android:textSize="17sp"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
</RelativeLayout>
